@@ -63,7 +63,7 @@ import org.mobicents.servlet.restcomm.cache.DiskCacheResponse;
 import org.mobicents.servlet.restcomm.dao.CallDetailRecordsDao;
 import org.mobicents.servlet.restcomm.dao.DaoManager;
 import org.mobicents.servlet.restcomm.dao.NotificationsDao;
-import org.mobicents.servlet.restcomm.email.EmailResponse;
+import org.mobicents.servlet.restcomm.api.EmailResponse;
 import org.mobicents.servlet.restcomm.entities.CallDetailRecord;
 import org.mobicents.servlet.restcomm.entities.Notification;
 import org.mobicents.servlet.restcomm.entities.Sid;
@@ -79,6 +79,7 @@ import org.mobicents.servlet.restcomm.interpreter.rcml.End;
 import org.mobicents.servlet.restcomm.interpreter.rcml.GetNextVerb;
 import org.mobicents.servlet.restcomm.interpreter.rcml.Nouns;
 import org.mobicents.servlet.restcomm.interpreter.rcml.Tag;
+import org.mobicents.servlet.restcomm.interpreter.rcml.ParserFailed;
 import org.mobicents.servlet.restcomm.mscontrol.messages.MediaGroupResponse;
 import org.mobicents.servlet.restcomm.mscontrol.messages.Mute;
 import org.mobicents.servlet.restcomm.mscontrol.messages.Play;
@@ -119,9 +120,9 @@ import org.mobicents.servlet.restcomm.telephony.RemoveParticipant;
 import org.mobicents.servlet.restcomm.telephony.StartBridge;
 import org.mobicents.servlet.restcomm.telephony.StopBridge;
 import org.mobicents.servlet.restcomm.telephony.StopConference;
+import org.mobicents.servlet.restcomm.telephony.CallFail;
 import org.mobicents.servlet.restcomm.tts.api.SpeechSynthesizerResponse;
 import org.mobicents.servlet.restcomm.util.UriUtils;
-
 import scala.concurrent.Await;
 import scala.concurrent.Future;
 import scala.concurrent.duration.Duration;
@@ -188,15 +189,16 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     private ActorRef sender;
     private boolean liveCallModification = false;
     private boolean recordingCall = true;
+    protected boolean isParserFailed = false;
 
     // Call bridging
     private final ActorRef bridgeManager;
     private ActorRef bridge;
 
     public VoiceInterpreter(final Configuration configuration, final Sid account, final Sid phone, final String version,
-            final URI url, final String method, final URI fallbackUrl, final String fallbackMethod, final URI statusCallback,
-            final String statusCallbackMethod, final String emailAddress, final ActorRef callManager,
-            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring) {
+                            final URI url, final String method, final URI fallbackUrl, final String fallbackMethod, final URI statusCallback,
+                            final String statusCallbackMethod, final String emailAddress, final ActorRef callManager,
+                            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring) {
         super();
         final ActorRef source = self();
         downloadingRcml = new State("downloading rcml", new DownloadingRcml(source), null);
@@ -243,6 +245,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(downloadingFallbackRcml, ready));
         transitions.add(new Transition(downloadingFallbackRcml, hangingUp));
         transitions.add(new Transition(downloadingFallbackRcml, finished));
+        transitions.add(new Transition(downloadingFallbackRcml, notFound));
         transitions.add(new Transition(ready, initializingCall));
         transitions.add(new Transition(ready, faxing));
         transitions.add(new Transition(ready, sendingEmail));
@@ -398,6 +401,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         if (!uri.endsWith("/")) {
             uri = uri + "/";
         }
+        try {
+            uri = UriUtils.resolve(new URI(uri)).toString();
+        } catch (URISyntaxException e) {
+            logger.error("URISyntaxException while trying to resolve Cache URI: " + e);
+        }
         uri = uri + accountId.toString();
         this.cache = cache(path, uri);
         this.downloader = downloader();
@@ -417,7 +425,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         builder.setApiVersion(version);
         builder.setLog(log);
         builder.setErrorCode(error);
-        final String base = configuration.subset("runtime-settings").getString("error-dictionary-uri");
+        String base = configuration.subset("runtime-settings").getString("error-dictionary-uri");
+        try {
+            base = UriUtils.resolve(new URI(base)).toString();
+        } catch (URISyntaxException e) {
+            logger.error("URISyntaxException when trying to resolve Error-Dictionary URI: " + e);
+        }
         StringBuilder buffer = new StringBuilder();
         buffer.append(base);
         if (!base.endsWith("/")) {
@@ -529,6 +542,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (CallStateChanged.class.equals(klass)) {
             final CallStateChanged event = (CallStateChanged) message;
             callState = event.state();
+            logger.info("VoiceInterpreter received CallStateChanged event: "+callState);
             if (CallStateChanged.State.RINGING == event.state()) {
                 if (forking.equals(state)) {
                     outboundCall = sender;
@@ -536,8 +550,8 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 // update db and callback statusCallback url.
             } else if (CallStateChanged.State.IN_PROGRESS == event.state()) {
                 if (initializingCall.equals(state) || rejecting.equals(state)) {
-                  if (parser != null) {
-                      fsm.transition(message, ready);
+                    if (parser != null) {
+                        fsm.transition(message, ready);
                     } else {
                         fsm.transition(message, downloadingRcml);
                     }
@@ -565,27 +579,63 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 } else if (bridged.equals(state) && (sender.equals(outboundCall) || outboundCall != null)) {
                     fsm.transition(message, finishDialing);
                 } else
-                // changed for https://bitbucket.org/telestax/telscale-restcomm/issue/132/ so that we can do Dial SIP Screening
-                if (forking.equals(state) && ((dialBranches != null && dialBranches.contains(sender)) || outboundCall == null)) {
-                    fsm.transition(message, finishDialing);
-                } else if (creatingRecording.equals(state)) {
-                    // Ask callMediaGroup to stop recording so we have the recording file available
-                    // Issue #197: https://telestax.atlassian.net/browse/RESTCOMM-197
-                    call.tell(new StopMediaGroup(), null);
-                    fsm.transition(message, finishRecording);
-                } else if ((bridged.equals(state) || forking.equals(state)) && call == sender()) {
-                    if (!dialActionExecuted) {
+                    // changed for https://bitbucket.org/telestax/telscale-restcomm/issue/132/ so that we can do Dial SIP Screening
+                    if (forking.equals(state) && ((dialBranches != null && dialBranches.contains(sender)) || outboundCall == null)) {
                         fsm.transition(message, finishDialing);
+                    } else if (creatingRecording.equals(state)) {
+                        // Ask callMediaGroup to stop recording so we have the recording file available
+                        // Issue #197: https://telestax.atlassian.net/browse/RESTCOMM-197
+                        call.tell(new StopMediaGroup(), null);
+                        fsm.transition(message, finishRecording);
+                    } else if ((bridged.equals(state) || forking.equals(state)) && call == sender()) {
+                        if (!dialActionExecuted) {
+                            fsm.transition(message, finishDialing);
+                        }
+                    } else if (finishDialing.equals(state)) {
+                        removeDialBranch(message, sender);
+                        return;
+                    } else {
+                        if (!finishDialing.equals(state))
+                            fsm.transition(message, finished);
+                    }
+            } else if (CallStateChanged.State.BUSY == event.state()) {
+                if (forking.equals(state)) {
+                    if (sender==call) {
+                        //Move to finishDialing to clear the call and cancel all branches
+                        fsm.transition(message, finishDialing);
+                    } else if (dialBranches.contains(sender)) {
+                        Attribute attribute = null;
+                        if (verb != null) {
+                            attribute = verb.attribute("action");
+                        }
+                        //Busy was sent by one of the branches, remove the branch, execute dial action and continue
+                        logger.info("call state changed. New call state: " + ((CallStateChanged) message).state() + "Sender in the dialBranches: " + dialBranches.contains(sender));
+                        ActorRef branch = dialBranches.remove(dialBranches.indexOf(sender));
+                        logger.info("Will cancel branch: " + branch.toString());
+                        branch.tell(new Cancel(), self());
+                        if (dialBranches.size() > 0) {
+                            return;
+                        } else if (attribute == null) {
+                            fsm.transition(message, finishDialing);
+                        } else  {
+                            fsm.transition(ReceiveTimeout.getInstance(), finishDialing);
+                        }
                     }
                 } else {
-                    if (!finishDialing.equals(state))
-                        fsm.transition(message, finished);
-                }
-            } else if (CallStateChanged.State.BUSY == event.state()) {
-                if (state != finishDialing)
                     fsm.transition(message, finishDialing);
+                }
             } else if (CallStateChanged.State.CANCELED == event.state()) {
-                callManager.tell(new DestroyCall(sender), self());
+                if (state == initializingBridge || state == acquiringOutboundCallInfo || state == bridging) {
+                    return;
+                } else {
+                    if (sender == call) {
+                        //Move to finished state only if the call actor send the Cancel.
+                        fsm.transition(message, finished);
+                    } else {
+                        //Do nothing, this is a Cancel from a dial branch previously canceled
+                        return;
+                    }
+                }
             }
         } else if (CallManagerResponse.class.equals(klass)) {
             final CallManagerResponse<ActorRef> response = (CallManagerResponse<ActorRef>) message;
@@ -596,9 +646,6 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     fsm.transition(message, processingDialChildren);
                 }
             } else {
-                if (state.equals(processingDialChildren)) {
-                    executeDialAction(message, outboundCall);
-                }
                 fsm.transition(message, hangingUp);
             }
         } else if (StartForking.class.equals(klass)) {
@@ -637,19 +684,19 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         + ", statusCode " + response.get().getStatusCode());
             }
             if (response.succeeded() && HttpStatus.SC_OK == response.get().getStatusCode()) {
-                fsm.transition(message, ready);
+                if (dialBranches == null || dialBranches.size()==0) {
+                    logger.info("Downloader response is success, moving to Ready state");
+                    fsm.transition(message, ready);
+                } else {
+                    return;
+                }
+            } else if (downloadingRcml.equals(state) && fallbackUrl != null) {
+                fsm.transition(message, downloadingFallbackRcml);
             } else if (response.succeeded() && HttpStatus.SC_NOT_FOUND == response.get().getStatusCode()) {
                 fsm.transition(message, notFound);
             } else {
-                if (downloadingRcml.equals(state)) {
-                    if (fallbackUrl != null) {
-                        fsm.transition(message, downloadingFallbackRcml);
-                    } else {
-                        fsm.transition(message, finished);
-                    }
-                } else {
-                    fsm.transition(message, finished);
-                }
+                call.tell(new CallFail(response.error()), self);
+//                    fsm.transition(message, finished);
             }
         } else if (DiskCacheResponse.class.equals(klass)) {
             final DiskCacheResponse response = (DiskCacheResponse) message;
@@ -660,7 +707,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     } else if (fax.equals(verb.name())) {
                         fsm.transition(message, faxing);
                     } else if (email.equals(verb.name())) {
-                    fsm.transition(message, sendingEmail);
+                        fsm.transition(message, sendingEmail);
                     }
                 } else if (processingGatherChildren.equals(state)) {
                     fsm.transition(message, processingGatherChildren);
@@ -675,6 +722,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     fsm.transition(message, hangingUp);
                 }
             }
+        } else if (ParserFailed.class.equals(klass)) {
+          logger.info("ParserFailed received. Will stop the call");
+            isParserFailed = true;
+            fsm.transition(message, hangingUp);
         } else if (Tag.class.equals(klass)) {
             // final Tag verb = (Tag) message;
             verb = (Tag) message;
@@ -715,12 +766,22 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 invalidVerb(verb);
             }
         } else if (End.class.equals(klass)) {
-            fsm.transition(message, hangingUp);
+            if (callState.equals(CallStateChanged.State.COMPLETED)) {
+                fsm.transition(message, finished);
+            } else {
+                if (!isParserFailed) {
+                    logger.info("End tag received will move to hangup the call");
+                    fsm.transition(message, hangingUp);
+                } else {
+                    logger.info("End tag received but parser failed earlier so hangup would have been already sent to the call");
+                }
+
+            }
         } else if (StartGathering.class.equals(klass)) {
             fsm.transition(message, gathering);
         } else if (MediaGroupResponse.class.equals(klass)) {
             final MediaGroupResponse<String> response = (MediaGroupResponse<String>) message;
-            logger.info("MediaGroupResponse, succeeded: "+response.succeeded()+"  "+response.cause());
+            logger.info("MediaGroupResponse, succeeded: " + response.succeeded() + "  " + response.cause());
             if (response.succeeded()) {
                 if (playingRejectionPrompt.equals(state)) {
                     fsm.transition(message, hangingUp);
@@ -729,7 +790,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 } else if (creatingRecording.equals(state)) {
                     fsm.transition(message, finishRecording);
                 } // This is either MMS collected digits or SIP INFO DTMF. If the DTMF is from SIP INFO, then more DTMF might
-                  // come later
+                // come later
                 else if (gathering.equals(state) || (finishGathering.equals(state) && !super.dtmfReceived)) {
                     final MediaGroupResponse<String> dtmfResponse = (MediaGroupResponse<String>) message;
                     if (sender == call) {
@@ -787,10 +848,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final EmailResponse response = (EmailResponse) message;
             if (!response.succeeded()) {
                 logger.error(
-                    "There was an error while sending an email :" + response.error(),
+                        "There was an error while sending an email :" + response.error(),
                         response.cause());
             }
-                fsm.transition(message, ready);
+            fsm.transition(message, ready);
         } else if (StopInterpreter.class.equals(klass)) {
             this.liveCallModification = ((StopInterpreter) message).isLiveCallModification();
             if (CallStateChanged.State.IN_PROGRESS.equals(callState) && !liveCallModification) {
@@ -816,6 +877,38 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             onBridgeStateChanged((BridgeStateChanged) message, self, sender);
         } else if (GetRelatedCall.class.equals(klass)) {
             onGetRelatedCall((GetRelatedCall) message, self, sender);
+        }
+    }
+
+    private void removeDialBranch(Object message, ActorRef sender) {
+        Attribute attribute = null;
+        if (verb != null) {
+            attribute = verb.attribute("action");
+        }
+        if (dialBranches != null && dialBranches.contains(sender)) {
+            logger.info("Dial branch new call state: " + ((CallStateChanged) message).state().toString() + " call path: " + sender().path() + " VI state: " + fsm.state());
+            dialBranches.remove(sender);
+//            if (attribute != null) {
+//                executeDialAction(message, sender);
+//            }
+            sender.tell(new Cancel(), self());
+            if (dialBranches.size() > 0) {
+                //Wait to check the response from the other branches
+                return;
+            } else {
+                dialChildren = null;
+//                outboundCall = null;
+                callback();
+                //Since there are no more branches, ask for the next RCML
+                if (attribute == null) {
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, self());
+                } else {
+                    executeDialAction(message,sender);
+                }
+            }
+        } else if (attribute != null) {
+            executeDialAction(message, sender);
         }
     }
 
@@ -865,7 +958,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     }
 
     private void conferenceStateModeratorPresent(final Object message) {
-        logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: "+call.path().toString());
+        logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: " + call.path().toString());
         call.tell(new Unmute(), self());
 
         if (confSubVoiceInterpreter != null) {
@@ -881,6 +974,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         final List<NameValuePair> parameters = new ArrayList<NameValuePair>();
         final String callSid = callInfo.sid().toString();
         parameters.add(new BasicNameValuePair("CallSid", callSid));
+        if (outboundCallInfo != null) {
+            final String outboundCallSid = outboundCallInfo.sid().toString();
+            parameters.add(new BasicNameValuePair("OutboundCallSid", outboundCallSid));
+        }
         final String accountSid = accountId.toString();
         parameters.add(new BasicNameValuePair("AccountSid", accountSid));
         final String from = e164(callInfo.from());
@@ -892,9 +989,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         parameters.add(new BasicNameValuePair("ApiVersion", version));
         final String direction = callInfo.direction();
         parameters.add(new BasicNameValuePair("Direction", direction));
-        final String callerName = (callInfo.fromName()==null || callInfo.fromName().isEmpty()) ? "null" : callInfo.fromName();
+        final String callerName = (callInfo.fromName() == null || callInfo.fromName().isEmpty()) ? "null" : callInfo.fromName();
         parameters.add(new BasicNameValuePair("CallerName", callerName));
-        final String forwardedFrom = (callInfo.forwardedFrom()==null || callInfo.forwardedFrom().isEmpty()) ? "null" : callInfo.forwardedFrom();
+        final String forwardedFrom = (callInfo.forwardedFrom() == null || callInfo.forwardedFrom().isEmpty()) ? "null" : callInfo.forwardedFrom();
         parameters.add(new BasicNameValuePair("ForwardedFrom", forwardedFrom));
         // logger.info("Type " + callInfo.type());
         SipServletResponse lastResponse = callInfo.lastResponse();
@@ -1029,8 +1126,16 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         builder.setDateCreated(callInfo.dateCreated());
                         builder.setAccountSid(accountId);
                         builder.setTo(callInfo.to());
-                        builder.setCallerName(callInfo.fromName());
-                        builder.setFrom(callInfo.from());
+                        if (callInfo.fromName() != null) {
+                            builder.setCallerName(callInfo.fromName());
+                        } else {
+                            builder.setCallerName("Unknown");
+                        }
+                        if (callInfo.from() != null) {
+                            builder.setFrom(callInfo.from());
+                        } else {
+                            builder.setFrom("Unknown");
+                        }
                         builder.setForwardedFrom(callInfo.forwardedFrom());
                         builder.setPhoneNumberSid(phoneId);
                         builder.setStatus(callState.toString());
@@ -1110,7 +1215,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
 
         @Override
-        public void execute(final Object message) throws Exception {
+        public void execute(final Object message) throws IOException {
             final UntypedActorContext context = getContext();
             final State state = fsm.state();
             if (initializingCall.equals(state)) {
@@ -1142,13 +1247,13 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
                 final String type = response.getContentType();
                 if (type != null) {
-                    if (type.contains("text/xml") || type.contains("application/xml") || type.contains("text/html")) {
-                        parser = parser(response.getContentAsString());
-                    } else if (type.contains("audio/wav") || type.contains("audio/wave") || type.contains("audio/x-wav")) {
-                        parser = parser("<Play>" + request.getUri() + "</Play>");
-                    } else if (type.contains("text/plain")) {
-                        parser = parser("<Say>" + response.getContentAsString() + "</Say>");
-                    }
+                        if (type.contains("text/xml") || type.contains("application/xml") || type.contains("text/html")) {
+                            parser = parser(response.getContentAsString());
+                        } else if (type.contains("audio/wav") || type.contains("audio/wave") || type.contains("audio/x-wav")) {
+                            parser = parser("<Play>" + request.getUri() + "</Play>");
+                        } else if (type.contains("text/plain")) {
+                            parser = parser("<Say>" + response.getContentAsString() + "</Say>");
+                        }
                 } else {
                     if (call != null) {
                         call.tell(new Hangup(), null);
@@ -1162,7 +1267,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
             // Ask the parser for the next action to take.
             final GetNextVerb next = GetNextVerb.instance();
-            parser.tell(next, source);
+            if (parser != null) {
+                parser.tell(next, source);
+            } else {
+                logger.info("Parser is null");
+            }
         }
     }
 
@@ -1232,31 +1341,30 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             String callerId = null;
 
             // Issue 210: https://telestax.atlassian.net/browse/RESTCOMM-210
-            final boolean useInitialFromAsCallerId = configuration.subset("runtime-settings").getBoolean(
-                    "from-address-to-proxied-calls");
-            if (useInitialFromAsCallerId)
-                callerId = callInfo.from();
+            final boolean useInitialFromAsCallerId = configuration.subset("runtime-settings").getBoolean("from-address-to-proxied-calls");
 
-            if (callerId == null) {
-                Attribute attribute = verb.attribute("callerId");
-                if (attribute != null) {
-                    callerId = attribute.value();
-                    if (callerId != null && !callerId.isEmpty()) {
-                        callerId = e164(callerId);
-                        if (callerId == null) {
-                            callerId = verb.attribute("callerId").value();
-                            final NotificationsDao notifications = storage.getNotificationsDao();
-                            final Notification notification = notification(ERROR_NOTIFICATION, 13214, callerId
-                                    + " is an invalid callerId.");
-                            notifications.addNotification(notification);
-                            sendMail(notification);
-                            final StopInterpreter stop = new StopInterpreter();
-                            source.tell(stop, source);
-                            return null;
-                        }
+            Attribute attribute = verb.attribute("callerId");
+            if (attribute != null) {
+                callerId = attribute.value();
+                if (callerId != null && !callerId.isEmpty()) {
+                    callerId = e164(callerId);
+                    if (callerId == null) {
+                        callerId = verb.attribute("callerId").value();
+                        final NotificationsDao notifications = storage.getNotificationsDao();
+                        final Notification notification = notification(ERROR_NOTIFICATION, 13214, callerId
+                                + " is an invalid callerId.");
+                        notifications.addNotification(notification);
+                        sendMail(notification);
+                        final StopInterpreter stop = new StopInterpreter();
+                        source.tell(stop, source);
+                        return null;
                     }
                 }
             }
+
+            if (callerId == null && useInitialFromAsCallerId)
+                callerId = callInfo.from();
+
             return callerId;
         }
 
@@ -1469,7 +1577,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             path += "ringing.wav";
             URI uri = null;
             try {
-                uri = URI.create(path);
+                uri = UriUtils.resolve(new URI(path));
             } catch (final Exception exception) {
                 final Notification notification = notification(ERROR_NOTIFICATION, 12400, exception.getMessage());
                 final NotificationsDao notifications = storage.getNotificationsDao();
@@ -1496,7 +1604,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             if (isForking) {
                 dialBranches.remove(outboundCall);
                 for (final ActorRef branch : dialBranches) {
-                    branch.tell(new Cancel(), source);
+                    branch.tell(new Cancel(), null);
                     // Race condition here. Correct way is to ask Call to Cancel and when done Call will notify Observer with
                     // CallStateChanged.Cancelled then
                     // ask CallManager to destroy the call.
@@ -1540,7 +1648,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         path += recordingSid.toString() + ".wav";
         httpRecordingUri += recordingSid.toString() + ".wav";
         this.recordingUri = URI.create(path);
-        this.publicRecordingUri = URI.create(httpRecordingUri);
+        try {
+            this.publicRecordingUri = UriUtils.resolve(new URI(httpRecordingUri));
+        } catch (URISyntaxException e) {
+            logger.error("URISyntaxException when trying to resolve Recording URI: " + e);
+        }
         recordingCall = true;
         StartRecording message = new StartRecording(accountId, callInfo.sid(), runtimeSettings, storage, recordingSid,
                 recordingUri);
@@ -1559,148 +1671,166 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
     @SuppressWarnings("unchecked")
     private void executeDialAction(final Object message, final ActorRef outboundCall) {
-        logger.info("Proceeding to execute Dial Action attribute");
-        this.dialActionExecuted = true;
-        final List<NameValuePair> parameters = parameters();
+        if (!dialActionExecuted && verb != null) {
+            logger.info("Proceeding to execute Dial Action attribute");
+            this.dialActionExecuted = true;
+            final List<NameValuePair> parameters = parameters();
 
-        Attribute attribute = verb.attribute("action");
+            Attribute attribute = verb.attribute("action");
 
-        if (call != null) {
-            try {
-                logger.info("Trying to get outboundCall Info");
-                final Timeout expires = new Timeout(Duration.create(5, TimeUnit.SECONDS));
-                Future<Object> future = (Future<Object>) ask(call, new GetCallInfo(), expires);
-                CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
-                        Duration.create(10, TimeUnit.SECONDS));
-                callInfo = callResponse.get();
-            } catch (Exception e) {
-                logger.error("Timeout waiting for inbound call info: \n" + e);
+            if (call != null) {
+                try {
+                    logger.info("Trying to get inbound call Info");
+                    final Timeout expires = new Timeout(Duration.create(5, TimeUnit.SECONDS));
+                    Future<Object> future = (Future<Object>) ask(call, new GetCallInfo(), expires);
+                    CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
+                            Duration.create(10, TimeUnit.SECONDS));
+                    callInfo = callResponse.get();
+                } catch (Exception e) {
+                    logger.error("Timeout waiting for inbound call info: \n" + e);
+                }
             }
-        }
 
-        if (outboundCall != null) {
-            try {
-                logger.info("Trying to get outboundCall Info");
-                final Timeout expires = new Timeout(Duration.create(10, TimeUnit.SECONDS));
-                Future<Object> future = (Future<Object>) ask(outboundCall, new GetCallInfo(), expires);
-                CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
-                        Duration.create(10, TimeUnit.SECONDS));
-                outboundCallInfo = callResponse.get();
-            } catch (Exception e) {
-                logger.error("Timeout waiting for outbound call info: \n" + e);
+            if (outboundCall != null) {
+                try {
+                    logger.info("Trying to get outboundCall Info");
+                    final Timeout expires = new Timeout(Duration.create(10, TimeUnit.SECONDS));
+                    Future<Object> future = (Future<Object>) ask(outboundCall, new GetCallInfo(), expires);
+                    CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
+                            Duration.create(10, TimeUnit.SECONDS));
+                    outboundCallInfo = callResponse.get();
+                    final long dialRingDuration = new Interval(this.outboundCallInfo.dateCreated(), this.outboundCallInfo.dateConUpdated()).toDuration()
+                            .getStandardSeconds();
+                    parameters.add(new BasicNameValuePair("DialRingDuration", String.valueOf(dialRingDuration)));
+                } catch (Exception e) {
+                    logger.error("Timeout waiting for outbound call info: \n" + e);
+                }
             }
-        }
 
-        // Handle Failed Calls
-        if (message instanceof CallManagerResponse && !(((CallManagerResponse<ActorRef>) message).succeeded())) {
-            if (outboundCallInfo != null) {
-                parameters.add(new BasicNameValuePair("DialCallSid", (outboundCallInfo.sid() == null) ? "null" : outboundCallInfo.sid().toString()));
-            } else {
-                parameters.add(new BasicNameValuePair("DialCallSid", "null"));
-            }
-            parameters.add(new BasicNameValuePair("DialCallStatus", CallStateChanged.State.FAILED.toString()));
-            parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
-            parameters.add(new BasicNameValuePair("RecordingUrl", null));
-            parameters.add(new BasicNameValuePair("PublicRecordingUrl", null));
-        }
-        // Handle No-Answer calls
-        else if (message instanceof ReceiveTimeout) {
-            if (outboundCallInfo != null) {
-                final String dialCallSid = this.outboundCallInfo.sid().toString();
-                final long dialCallDuration = new Interval(this.outboundCallInfo.dateCreated(), DateTime.now()).toDuration()
-                        .getStandardSeconds();
-                final String recordingUrl = this.recordingUri == null ? null : this.recordingUri.toString();
-                final String publicRecordingUrl = this.publicRecordingUri == null ? null : this.publicRecordingUri.toString();
-
-                parameters.add(new BasicNameValuePair("DialCallSid", dialCallSid));
-                // parameters.add(new BasicNameValuePair("DialCallStatus", dialCallStatus == null ? null : dialCallStatus
-                // .toString()));
-                parameters.add(new BasicNameValuePair("DialCallStatus", CallStateChanged.State.NO_ANSWER.toString()));
-                parameters.add(new BasicNameValuePair("DialCallDuration", String.valueOf(dialCallDuration)));
-                parameters.add(new BasicNameValuePair("RecordingUrl", recordingUrl));
-                parameters.add(new BasicNameValuePair("PublicRecordingUrl", publicRecordingUrl));
-            } else {
-                parameters.add(new BasicNameValuePair("DialCallSid", "null"));
-                parameters.add(new BasicNameValuePair("DialCallStatus", CallStateChanged.State.NO_ANSWER.toString()));
+            // Handle Failed Calls
+            if (message instanceof CallManagerResponse && !(((CallManagerResponse<ActorRef>) message).succeeded())) {
+                if (outboundCallInfo != null) {
+                    parameters.add(new BasicNameValuePair("DialCallSid", (outboundCallInfo.sid() == null) ? "null" : outboundCallInfo.sid().toString()));
+                } else {
+                    parameters.add(new BasicNameValuePair("DialCallSid", "null"));
+                }
+                parameters.add(new BasicNameValuePair("DialCallStatus", CallStateChanged.State.FAILED.toString()));
                 parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
                 parameters.add(new BasicNameValuePair("RecordingUrl", null));
                 parameters.add(new BasicNameValuePair("PublicRecordingUrl", null));
             }
-        } else {
-            // Handle the rest of the cases
-            if (outboundCallInfo != null) {
-                final String dialCallSid = this.outboundCallInfo.sid().toString();
-                final CallStateChanged.State dialCallStatus = this.outboundCallInfo.state();
-                final long dialCallDuration = new Interval(this.outboundCallInfo.dateCreated(), DateTime.now()).toDuration()
-                        .getStandardSeconds();
-                final String recordingUrl = this.recordingUri == null ? null : this.recordingUri.toString();
-                final String publicRecordingUrl = this.publicRecordingUri == null ? null : this.publicRecordingUri.toString();
+            // Handle No-Answer calls
+            else if (message instanceof ReceiveTimeout) {
+                if (outboundCallInfo != null) {
+                    final String dialCallSid = this.outboundCallInfo.sid().toString();
+                    long dialCallDuration;
+                    if (outboundCallInfo.state().toString().equalsIgnoreCase("Completed")) {
+                        dialCallDuration = new Interval(this.outboundCallInfo.dateConUpdated(), DateTime.now()).toDuration()
+                                .getStandardSeconds();
+                    } else {
+                        dialCallDuration = 0L;
+                    }
+                    final String recordingUrl = this.recordingUri == null ? null : this.recordingUri.toString();
+                    final String publicRecordingUrl = this.publicRecordingUri == null ? null : this.publicRecordingUri.toString();
 
-                parameters.add(new BasicNameValuePair("DialCallSid", dialCallSid));
-                // If Caller sent the BYE request, at the time we execute this method, the outbound call status is still in
-                // progress
-                if (callInfo.state().equals(CallStateChanged.State.COMPLETED)) {
-                    parameters.add(new BasicNameValuePair("DialCallStatus", callInfo.state().toString()));
+                    parameters.add(new BasicNameValuePair("DialCallSid", dialCallSid));
+                    // parameters.add(new BasicNameValuePair("DialCallStatus", dialCallStatus == null ? null : dialCallStatus
+                    // .toString()));
+                    parameters.add(new BasicNameValuePair("DialCallStatus", outboundCallInfo.state().toString()));
+                    parameters.add(new BasicNameValuePair("DialCallDuration", String.valueOf(dialCallDuration)));
+                    parameters.add(new BasicNameValuePair("RecordingUrl", recordingUrl));
+                    parameters.add(new BasicNameValuePair("PublicRecordingUrl", publicRecordingUrl));
                 } else {
-                    parameters.add(new BasicNameValuePair("DialCallStatus", dialCallStatus == null ? null : dialCallStatus
-                            .toString()));
+                    parameters.add(new BasicNameValuePair("DialCallSid", "null"));
+                    parameters.add(new BasicNameValuePair("DialCallStatus", CallStateChanged.State.NO_ANSWER.toString()));
+                    parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
+                    parameters.add(new BasicNameValuePair("RecordingUrl", null));
+                    parameters.add(new BasicNameValuePair("PublicRecordingUrl", null));
                 }
-                parameters.add(new BasicNameValuePair("DialCallDuration", String.valueOf(dialCallDuration)));
-                parameters.add(new BasicNameValuePair("RecordingUrl", recordingUrl));
-                parameters.add(new BasicNameValuePair("PublicRecordingUrl", publicRecordingUrl));
             } else {
-                parameters.add(new BasicNameValuePair("DialCallSid", "null"));
-                parameters.add(new BasicNameValuePair("DialCallStatus", "null"));
-                parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
-                parameters.add(new BasicNameValuePair("RecordingUrl", null));
-                parameters.add(new BasicNameValuePair("PublicRecordingUrl", "null"));
-            }
-        }
+                // Handle the rest of the cases
+                if (outboundCallInfo != null) {
+                    final String dialCallSid = this.outboundCallInfo.sid().toString();
+                    final CallStateChanged.State dialCallStatus = this.outboundCallInfo.state();
+                    long dialCallDuration = 0L;
+                    //In some cases, such as when the outbound dial is busy, the dialCallDuration wont be possbile to be calculated and will throw exception
+                    try {
+                        dialCallDuration = new Interval(this.outboundCallInfo.dateConUpdated(), DateTime.now()).toDuration()
+                                .getStandardSeconds();
+                    } catch (Exception e) {}
+                    final String recordingUrl = this.recordingUri == null ? null : this.recordingUri.toString();
+                    final String publicRecordingUrl = this.publicRecordingUri == null ? null : this.publicRecordingUri.toString();
 
-        final NotificationsDao notifications = storage.getNotificationsDao();
-        if (attribute != null) {
-            logger.info("Executing Dial Action attribute.");
-            String action = attribute.value();
-            if (action != null && !action.isEmpty()) {
-                URI target = null;
-                try {
-                    target = URI.create(action);
-                } catch (final Exception exception) {
-                    final Notification notification = notification(ERROR_NOTIFICATION, 11100, action + " is an invalid URI.");
-                    notifications.addNotification(notification);
-                    sendMail(notification);
-                    final StopInterpreter stop = new StopInterpreter();
-                    self().tell(stop, self());
-                    return;
+                    parameters.add(new BasicNameValuePair("DialCallSid", dialCallSid));
+                    // If Caller sent the BYE request, at the time we execute this method, the outbound call status is still in
+                    // progress
+                    if (callInfo.state().equals(CallStateChanged.State.COMPLETED)) {
+                        parameters.add(new BasicNameValuePair("DialCallStatus", callInfo.state().toString()));
+                    } else {
+                        parameters.add(new BasicNameValuePair("DialCallStatus", dialCallStatus == null ? null : dialCallStatus
+                                .toString()));
+                    }
+                    if (callState == CallStateChanged.State.BUSY)
+                        parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
+                    else
+                        parameters.add(new BasicNameValuePair("DialCallDuration", String.valueOf(dialCallDuration)));
+                    parameters.add(new BasicNameValuePair("RecordingUrl", recordingUrl));
+                    parameters.add(new BasicNameValuePair("PublicRecordingUrl", publicRecordingUrl));
+                } else {
+                    parameters.add(new BasicNameValuePair("DialCallSid", "null"));
+                    parameters.add(new BasicNameValuePair("DialCallStatus", "null"));
+                    parameters.add(new BasicNameValuePair("DialCallDuration", "0"));
+                    parameters.add(new BasicNameValuePair("RecordingUrl", null));
+                    parameters.add(new BasicNameValuePair("PublicRecordingUrl", "null"));
                 }
-                final URI base = request.getUri();
-                final URI uri = UriUtils.resolve(base, target);
-                // Parse "method".
-                String method = "POST";
-                attribute = verb.attribute("method");
-                if (attribute != null) {
-                    method = attribute.value();
-                    if (method != null && !method.isEmpty()) {
-                        if (!"GET".equalsIgnoreCase(method) && !"POST".equalsIgnoreCase(method)) {
-                            final Notification notification = notification(WARNING_NOTIFICATION, 13210, method
-                                    + " is not a valid HTTP method for <Dial>");
-                            notifications.addNotification(notification);
+            }
+
+            final NotificationsDao notifications = storage.getNotificationsDao();
+            if (attribute != null) {
+                logger.info("Executing Dial Action attribute.");
+                String action = attribute.value();
+                if (action != null && !action.isEmpty()) {
+                    URI target = null;
+                    try {
+                        target = URI.create(action);
+                    } catch (final Exception exception) {
+                        final Notification notification = notification(ERROR_NOTIFICATION, 11100, action + " is an invalid URI.");
+                        notifications.addNotification(notification);
+                        sendMail(notification);
+                        final StopInterpreter stop = new StopInterpreter();
+                        self().tell(stop, self());
+                        return;
+                    }
+                    final URI base = request.getUri();
+                    final URI uri = UriUtils.resolve(base, target);
+                    // Parse "method".
+                    String method = "POST";
+                    attribute = verb.attribute("method");
+                    if (attribute != null) {
+                        method = attribute.value();
+                        if (method != null && !method.isEmpty()) {
+                            if (!"GET".equalsIgnoreCase(method) && !"POST".equalsIgnoreCase(method)) {
+                                final Notification notification = notification(WARNING_NOTIFICATION, 13210, method
+                                        + " is not a valid HTTP method for <Dial>");
+                                notifications.addNotification(notification);
+                                method = "POST";
+                            }
+                        } else {
                             method = "POST";
                         }
-                    } else {
-                        method = "POST";
                     }
+                    logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
+                    logger.debug("Dial Action parameters: \n" + parameters);
+                    // Redirect to the action url.
+                    request = new HttpRequestDescriptor(uri, method, parameters);
+                    // Tell the downloader to send the Dial Parameters to the Action url but we don't need a reply back so sender ==
+                    // null
+                    downloader.tell(request, self());
+                    return;
                 }
-                logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
-                logger.debug("Dial Action parameters: \n" + parameters);
-                // Redirect to the action url.
-                request = new HttpRequestDescriptor(uri, method, parameters);
-                // Tell the downloader to send the Dial Parameters to the Action url but we don't need a reply back so sender ==
-                // null
-                downloader.tell(request, self());
-                return;
             }
-
+        } else if (verb == null) {
+            logger.info("Dial action didn't executed because verb is null");
         }
     }
 
@@ -1712,43 +1842,103 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         @Override
         public void execute(final Object message) throws Exception {
             final State state = fsm.state();
+            logger.info("FinishDialing, current state: " + state);
             Attribute attribute = null;
-           if(verb !=null) {
-                 attribute = verb.attribute("action");
+            if (verb != null) {
+                attribute = verb.attribute("action");
             }
 
-            if ((message instanceof ReceiveTimeout) || (message instanceof CallStateChanged)) {
-                if (message instanceof ReceiveTimeout) {
-                    logger.info("Received timeout, will cancel calls");
-                }
-                if (message instanceof CallStateChanged) {
-                    logger.info("call state changed. New call state: " + ((CallStateChanged) message).state());
-                }
-                if (forking.equals(state)) {
-                    final UntypedActorContext context = getContext();
-                    context.setReceiveTimeout(Duration.Undefined());
-                    for (final ActorRef branch : dialBranches) {
-                        if (branch == outboundCall) {
-                            if (attribute != null) {
-                                executeDialAction(message, outboundCall);
-                            }
-                        }
+            if (message instanceof ReceiveTimeout && dialBranches != null) {
+                logger.info("Received timeout, will cancel branches, current VoiceIntepreter state: " + state);
+                //The forking timeout reached, we have to cancel all dial branches
+                final UntypedActorContext context = getContext();
+                context.setReceiveTimeout(Duration.Undefined());
+
+                if (dialBranches != null) {
+                    Iterator<ActorRef> dialBranchesIterator = dialBranches.iterator();
+                    while (dialBranchesIterator.hasNext()) {
+                        ActorRef branch = dialBranchesIterator.next();
+    //                    if (attribute != null) {
+    //                        executeDialAction(message, branch);
+    //                    }
                         branch.tell(new Cancel(), source);
-                        // No need to destroy here.
-                        // Call will get Cancel and then FSM will move to Completed where finally we destroy calls
-                        // callManager.tell(new DestroyCall(branch), source);
+                        logger.info("Canceled branch: " + branch.path());
                     }
-                    call.tell(new StopMediaGroup(), null);
-                    if (attribute == null) {
+                }
+                if (dialBranches != null && dialBranches.size() > 0) {
+                    dialBranches = null;
+                }
+//                    call.tell(new StopMediaGroup(), null);
+                if (attribute == null) {
+                    logger.info("Will ask for the next verb from parser");
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, source);
+                } else {
+                    if (outboundCall != null) {
+                        executeDialAction(message,outboundCall);
+                    } else {
+                        executeDialAction(message,null);
+                    }
+                }
+                dialChildren = null;
+                outboundCall = null;
+                callback();
+                return;
+            }
+
+            if (message instanceof CallStateChanged) {
+                logger.info("CallStateChanged state: "+((CallStateChanged)message).state().toString()+" ,sender: "+sender().path());
+                if (forking.equals(state) || finishDialing.equals(state)) {
+                    if (sender.equals(call)) {
+                        //Initial call wants to finish dialing
+                        logger.info("Sender == call: " + sender.equals(call));
+                        final UntypedActorContext context = getContext();
+                        context.setReceiveTimeout(Duration.Undefined());
+
+                        Iterator<ActorRef> dialBranchesIterator = dialBranches.iterator();
+                        while (dialBranchesIterator.hasNext()) {
+                            ActorRef branch = dialBranchesIterator.next();
+//                            if (attribute != null) {
+//                                executeDialAction(message, branch);
+//                            }
+                            branch.tell(new Cancel(), source);
+                        }
+                        if (dialBranches.size() > 0) {
+                            dialBranches = null;
+                        }
+                        //Since initial call wants to finish dialling there is no point to check form RCML next
+//                        if (attribute == null) {
+//                            final GetNextVerb next = GetNextVerb.instance();
+//                            parser.tell(next, source);
+//                        }
+                        //Instead move the FSM to finished
+                        dialChildren = null;
+                        outboundCall = null;
+                        callback();
+                        fsm.transition(message, finished);
+                        return;
+                    } else if (dialBranches != null && dialBranches.contains(sender)) {
+                        removeDialBranch(message, sender);
+                        return;
+                    } else {
+                        // Ask the parser for the next action to take.
                         final GetNextVerb next = GetNextVerb.instance();
-                        parser.tell(next, source);
+                        if (parser != null) {
+                            parser.tell(next, source);
+                        }
+
+                        dialChildren = null;
+                        outboundCall = null;
+                        return;
                     }
-                    dialChildren = null;
-                    outboundCall = null;
-                    callback();
-                    return;
                 } else if (bridged.equals(state)) {
+                    logger.info("finishDialing state=bridged, will hangup outboundCall");
                     outboundCall.tell(new Hangup(), source);
+                } else {
+                    logger.debug("FinishDialing, State: " + state);
+                    logger.debug("State is not FORKING and not Bridged");
+                    logger.debug("Sender is initial call: " + sender.equals(call));
+                    logger.debug("Sender in the dialBranches: " + dialBranches.contains(sender));
                 }
             }
 
@@ -1765,9 +1955,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             // Stop the bridge. Cleanup will be handled by BridgeManager.
-            final StopBridge stopBridge = new StopBridge();
-            bridge.tell(stopBridge, super.source);
-            bridge = null;
+            if (bridge != null) {
+                final StopBridge stopBridge = new StopBridge();
+                bridge.tell(stopBridge, super.source);
+                bridge = null;
+            }
 
             if (attribute != null) {
                 logger.info("Executing Dial Action url");
@@ -1785,7 +1977,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             // Ask the parser for the next action to take.
             final GetNextVerb next = GetNextVerb.instance();
-            if(parser !=null) {
+            if (parser != null) {
                 parser.tell(next, source);
             }
 
@@ -1853,10 +2045,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     if (!path.endsWith("/")) {
                         path += "/";
                     }
-                    path += "beep.wav";
+                    String entryAudio = configuration.subset("runtime-settings").getString("conference-entry-audio");
+                    path += entryAudio == null || entryAudio.equals("") ? "beep.wav" : entryAudio;
                     URI uri = null;
                     try {
-                        uri = URI.create(path);
+                        uri = UriUtils.resolve(new URI(path));
                     } catch (final Exception exception) {
                         final Notification notification = notification(ERROR_NOTIFICATION, 12400, exception.getMessage());
                         final NotificationsDao notifications = storage.getNotificationsDao();
@@ -2077,10 +2270,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
+            logger.info("At Finished state, state: " + fsm.state());
             final Class<?> klass = message.getClass();
             if (CallStateChanged.class.equals(klass)) {
                 final CallStateChanged event = (CallStateChanged) message;
                 callState = event.state();
+            }
                 if (callRecord != null) {
                     callRecord = callRecord.setStatus(callState.toString());
                     final DateTime end = DateTime.now();
@@ -2090,24 +2285,24 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     final CallDetailRecordsDao records = storage.getCallDetailRecordsDao();
                     records.updateCallDetailRecord(callRecord);
                 }
+                if (!dialActionExecuted)
+                    executeDialAction(message, outboundCall);
                 callback(true);
-            }
 
             // XXX review bridge cleanup!!
 
             // Cleanup bridge
-            if ((bridge != null) || is(forking) || is(acquiringOutboundCallInfo)) {
+            if ((bridge != null) && (is(forking) || is(acquiringOutboundCallInfo) || is(bridged))) {
                 // Stop the bridge
                 bridge.tell(new StopBridge(), super.source);
                 bridge = null;
-
+            }
                 // Cleanup the outbound call if necessary.
                 // XXX verify if this code is still necessary
                 if (outboundCall != null && !liveCallModification) {
                     outboundCall.tell(new StopObserving(source), null);
                     outboundCall.tell(new Hangup(), null);
                 }
-            }
 
             // If the call is in a conference remove it.
             if (conference != null) {
@@ -2126,14 +2321,37 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 // Stop Observing the conference
                 conference.tell(new StopObserving(super.source), null);
 
+                // Play beep when participant leave the conference.
+                // Do not play beep if this was the last participant to leave the conference, because there is no one to listen to the beep.
+                if(conferenceInfo.participants() != null && conferenceInfo.participants().size() !=0 ){
+                    String path = configuration.subset("runtime-settings").getString("prompts-uri");
+                    if (!path.endsWith("/")) {
+                        path += "/";
+                    }
+                    String exitAudio = configuration.subset("runtime-settings").getString("conference-exit-audio");
+                    path += exitAudio == null || exitAudio.equals("") ? "alert.wav" : exitAudio;
+                    URI uri = null;
+                    try {
+                        uri = UriUtils.resolve(new URI(path));
+                    } catch (final Exception exception) {
+                        final Notification notification = notification(ERROR_NOTIFICATION, 12400, exception.getMessage());
+                        final NotificationsDao notifications = storage.getNotificationsDao();
+                        notifications.addNotification(notification);
+                        sendMail(notification);
+                        final StopInterpreter stop = new StopInterpreter();
+                        source.tell(stop, source);
+                        return;
+                    }
+                    final Play play = new Play(uri, 1);
+                    conference.tell(play, source);
+                }
+
                 if (endOnExit) {
                     // Stop the conference if endConferenceOnExit is true
                     final StopConference stop = new StopConference();
                     conference.tell(stop, super.source);
                 } else {
-                    // Otherwise simply remove the call from it
-                    final RemoveParticipant removeParticipant = new RemoveParticipant(call);
-                    conference.tell(removeParticipant, super.source);
+                    conference.tell(new RemoveParticipant(call), source);
                 }
             }
 
@@ -2155,7 +2373,6 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 context.stop(mailerNotify);
             if (mailerService != null)
                 context.stop(mailerService);
-            context.stop(downloader);
             context.stop(asrService);
             context.stop(faxService);
             context.stop(cache);
@@ -2165,6 +2382,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             postCleanup();
         }
     }
+
 
     @Override
     public void postStop() {
@@ -2230,7 +2448,14 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
 
         private ActorRef buildSubVoiceInterpreter(Tag child) throws MalformedURLException, URISyntaxException {
-            URI url = new URL(child.attribute("url").value()).toURI();
+//            URI url = new URL(child.attribute("url").value()).toURI();
+            URI url = null;
+            if (request != null) {
+                final URI base = request.getUri();
+                url = UriUtils.resolve(base, new URI(child.attribute("url").value()));
+            } else {
+                url = UriUtils.resolve(new URI(child.attribute("url").value()));
+            }
             String method;
             if (child.hasAttribute("method")) {
                 method = child.attribute("method").value().toUpperCase();
@@ -2262,7 +2487,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 StartInterpreter start = new StartInterpreter(outboundCall);
                 Timeout expires = new Timeout(Duration.create(6000, TimeUnit.SECONDS));
                 Future<Object> future = (Future<Object>) ask(interpreter, start, expires);
-                Object object = Await.result(future, Duration.create(6000, TimeUnit.SECONDS));
+                Object object = Await.result(future, Duration.create(6000 * 10, TimeUnit.SECONDS));
 
                 if (!End.class.equals(object.getClass())) {
                     fsm.transition(message, hangingUp);
